# QR-Scan-poc

./: README.md  docker-compose.yaml
qr-api/: Dockerfile  main.py  pyproject.toml
qr-api/src/: config.py  logger.py  main.py  middleware.py
