[tool.poetry]
package-mode = false
authors = ["AndoniHQ <andoni.hernandez.quero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
pyzbar = "^0.1.9"
opencv-python-headless = "^4.10.0.84"
boto3 = "^1.35.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"